Oppsummeringsdokument upgrade og forsøk på fix #deploy-oppsummeringsdokument-service